--- a/ressources/manifest/manifest.json
+++ b/ressources/manifest/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Scarlett and Lennny",
-  "short_name": "S+L",
+  "name": "Habit Rewards",
+  "short_name": "Habits",
   "icons": [
     {
         "src": "/android-chrome-192x192.png",
