--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "source/buttonstylemodule"]
 	path = source/buttonstylemodule
 	url = git@github.com:JhonnyJason/pwa-sources-buttonstylemodule.git
+[submodule "source/statemodule"]
+	path = source/statemodule
+	url = git@github.com:JhonnyJason/pwa-sources-statemodule.git
